[package]
name = "super_continent_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dotenv = "0.15.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "*"
tokio = {version = "1.4", features = ["full"]}
fastwebsockets = {version="0.4.4", features= ["upgrade"]}
hyper = {version="0.14.27", features = ["full"]}
tungstenite = "0.20.0"
tokio-tungstenite = "0.20.0"
futures-util = "0.3.28"
futures-channel = "0.3.28"
#futures = { version = "0.3", default-features = false }
#warp = "0.3"
#tokio-stream = "0.1.14"
